apm-kubernetes-setup/sample-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: apm
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
      - name: elastic-apm-agent
        emptyDir: {}
      containers:
      - name: petclinic
        image: eyalkoren/pet-clinic:without-agent
        volumeMounts:
        - mountPath: /elastic/apm/agent
          name: elastic-apm-agent
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: apm
  labels:
    app: petclinic
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 32688
  selector:
    app: petclinic
