apm-kubernetes-setup/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm-server
  namespace: apm
  labels:
    k8s-app: apm-server
spec:
  ports:
  - port: 8200
    targetPort: 8200
    name: http
  selector:
    k8s-app: apm-server
  type: NodePort
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm-server
  namespace: apm
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: apm-server
  template:
    metadata:
      labels:
        k8s-app: apm-server
    spec:
      containers:
      - name: apm-server
        image: docker.elastic.co/apm/apm-server:7.17.5
        ports:
        - containerPort: 8200
          name: apm-port
        volumeMounts:
        - name: apm-server-config
          mountPath: /usr/share/apm-server/apm-server.yml
          readOnly: true
          subPath: apm-server.yml
      volumes:
      - name: apm-server-config
        configMap:
          name: apm-server-config
