apm-kubernetes-setup/apm-with-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm-server
  namespace: apm
spec:
  selector:
    app: apm-server
  type: NodePort
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      nodePort: 32082

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm-server
  namespace: apm
  labels:
    app: apm-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apm-server
  template:
    metadata:
      labels:
        app: apm-server
    spec:
      containers:
        - name: apm-server
          image: docker.elastic.co/apm/apm-server:7.17.5
          ports:
            - containerPort: 8200

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apm-server
  namespace: apm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: apm.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apm-server
                port:
                  name: http
